# OpenWasteMap

./: .dockerignore  .env_example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  DOCS.md  Dockerfile  README.md  build_docker.sh  build_docker_dev.sh  build_docker_prod.sh  build_sass.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.stag.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/: build_and_test.env  dependabot.yml  docker-compose.ci.yml
.github/workflows/: backend.yml  backend_build_and_test.yml  build_and_push.yml  django.yml  frontend_build.yml
OpenWasteMap/: __init__.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  apps.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
backend/: Dockerfile  backend.dockerfile  celeryworker.dockerfile  start.sh
backend/app/: .gitignore  backend-start-reload.sh  backend-start.sh  pyproject.toml  tile-manager-start-reload.sh  tile-manager-start.sh  worker-start.sh
backend/app/alembic/versions/: 06f47f8673a9_first_revision.py  25458c30563c_add_column_date_joined_to_user_model.py  4e55686673fb_initial_revision.py  552c9b2db396_removed_full_name_from_user_model.py  94ed19c44dd8_added_table_for_tile_cache.py  99f185d58885_initial_revision.py  aecdb528222c_add_column_email_verified_to_user_model.py  cd636a1ab1f7_added_table_for_cached_tiles.py  f0b75973bb3a_added_column_last_refresh_to_for_tile_.py
backend/app/app/: tile_manager.py  utils.py  worker.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: admin.py  login.py  tiles.py  users.py  utils.py  waste_samples.py
backend/app/app/api/tiles_v1/: api.py
backend/app/app/api/tiles_v1/endpoints/: tiles.py
backend/app/app/backup/: tasks.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/crud/: __init__.py  crud_user.py  crud_waste_sample.py
backend/app/app/db/: base.py  init_db.py
backend/app/app/email-templates/src/: reset_password.mjml  verify_email.mjml
backend/app/app/models/: __init__.py  cached_tile.py  user.py  waste_sample.py
backend/app/app/rendering/: render.py  utilities.py
backend/app/app/schemas/: __init__.py  tile_cache.py  user.py  waste_sample.py
backend/app/app/tests/api/api_v1/: test_celery.py  test_login.py  test_tiles.py  test_users.py  test_waste_samples.py
backend/app/app/tests/crud/: test_user.py  test_waste_sample.py
backend/app/app/tests/rendering/: test_render.py
backend/app/app/tests/tile_cache/: test_tile_cache.py
backend/app/app/tests/utils/: tile.py  tile_cache.py  user.py  utils.py  waste_sample.py
backend/app/app/tile_cache/: __init__.py  render_outdated.py  tile_cache.py
backend/app/scripts/: test.sh
backend/app/utility/: render_tile.py
deployment/cron/: mailer_cron
deployment/httpd/: django_proxy.conf
docs/: mysql_docker.md
frontend/: .env  Dockerfile  package-lock.json  package.json  tslint.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  api.ts  env.ts  main.ts  registerServiceWorker.ts  router.ts  utils.ts
httpd/: default.conf
map_viewer/: apps.py  tests.py  urls.py  views.py
openwastemap/: manage.py
openwastemap/accounts/: forms.py  views.py
openwastemap/openwastemap/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
openwastemap/templates/: base.html  footer.html
openwastemap/tile_server/: parameters.py  render.py  tasks.py  tests.py  utilities.py  views.py
openwastemap/utilities/: test_utilities.py
openwastemap/waste_samples/: admin.py  (+2 more)
owm/: manage.py
scripts/: build-push.sh  build.sh  deploy-staging.sh  deploy.sh
templates/: base.html  menu.html
tile_server/: apps.py  render.py  render_tile.py  tests.py  urls.py  views.py
utilities/: test_utilities.py
waste_samples/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+115 files in other folders)
