[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.99.0"}
requests = "^2.32.3"
celery = "^5.4.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^9.0.0"
pydantic = "^1.10"
raven = "^6.10.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.6"
alembic = "^1.13.2"
sqlalchemy = "^1.4.44"
pytest = "^8.3.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
Pillow = "^10.4.0"
numpy = {version = "^2.0.1", python = ">=3.8,<3.11"}
fastapi-mail = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^1.0"
black = "^24.4"
isort = "^5.10.1"
autoflake = "^1.7.1"
flake8 = "^5.0.4"
pytest = "^8.3.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^5.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

